--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^16.4.2",
     "react-barcode": "^1.3.4",
     "react-bootstrap": "^0.32.3",
+    "react-bootstrap-table": "^4.3.1",
     "react-confirm-alert": "^2.0.5",
     "react-dom": "^16.4.2",
     "react-geolocated": "^2.4.0",
