--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-notify-toast": "^0.5.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
+    "react-select": "^2.4.1",
     "react-table": "^6.8.6",
     "react-to-print": "^2.0.0-alpha-2"
   },
